...
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordET"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/loginAccButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HAVE AN ACCOUNT? GO TO LOGIN SCREEN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
...
